--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/splashFragment">
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="kz.hack.coumrah.HomeFragment"
+        android:name="com.example.hajjurmah.presentation.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/placesFragment"
-        android:name="com.example.hajjurmah.places.PlacesFragment"
+        android:name="com.example.hajjurmah.presentation.places.PlacesFragment"
         android:label="fragment_list"
         tools:layout="@layout/fragment_list" >
         <action
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/locationFragment"
-        android:name="com.example.hajjurmah.location.LocationFragment"
+        android:name="com.example.hajjurmah.presentation.location.LocationFragment"
         android:label="fragment_detailed"
         tools:layout="@layout/fragment_detailed" >
         <argument
@@ -41,7 +41,25 @@
     </fragment>
     <fragment
         android:id="@+id/guideFragment"
-        android:name="com.example.hajjurmah.guide.GuideFragment"
+        android:name="com.example.hajjurmah.presentation.guide.GuideFragment"
         android:label="fragment_guide"
         tools:layout="@layout/fragment_guide" />
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.example.hajjurmah.presentation.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash" >
+        <action
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/hickmetFragment"
+        android:name="com.example.hajjurmah.HickmetFragment"
+        android:label="fragment_hicmet"
+        tools:layout="@layout/fragment_hicmet" />
 </navigation>
