--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--    Custom Colors       -->
+    
+    <color name="green_174240">#174240</color>
+    <color name="white_F9F9F9">#F9F9F9</color>
+    <color name="gold_F8C765">#F8C765</color>
+    <color name="black_141414">#141414</color>
+    <color name="white_F5F0E3">#FFF3E8</color>
+    <color name="grey_7F7F7F">#7F7F7F</color>
+    <color name="background_F0F0F0">#F0F0F0</color>
 </resources>
